--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "private": "true",
     "license": "UNLICENSED",
     "scripts": {
-        "dev": "npx serve src",
-        "css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+        "css": "npx tailwindcss -i ./tw.css -o ./style.css --watch"
     },
     "devDependencies": {
-        "serve": "^14.2.1",
         "tailwindcss": "^3.4.3"
     }
 }
